# grafos_sociales_Petroglifos

./: .env.example  .gitignore  .python-version  ARCHITECTURE.md  FLUJO_TECNICO.md  TECHNICAL.md  postman_collection.json  pyproject.toml
adapters/inbound/api/: main.py
adapters/outbound/embeddings/: efficientnet_adapter.py
adapters/outbound/vector_store/: pgvector_adapter.py
config/: settings.py
core/domain/entities/: site.py
core/domain/enums/: taxonomy.py
frontend/: README.md  app.js  index.html  styles.css
graphs/: social_graph.py
infrastructure/database/: session.py
infrastructure/database/migrations/: schema.sql
infrastructure/database/models/: models.py
orchestrator/: comparator.py
scripts/: build_manifest.py  bulk_compare.py  enrich_sites.py  generate_synthetic_corpus.py  migrate.py  migrate_add_provisional.py  seed_embeddings.py
storage/graphs/: red_rupestre.html  red_rupestre_plotly.html
storage/reference_images/: manifest.csv  manifest_large.csv
