[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grafos-sociales"
version = "1.0.0"
description = "Red de similitud iconográfica entre sitios rupestres — módulo de grafos sociales"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Base de datos
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.2",
    # Grafo
    "networkx>=3.3",
    "python-louvain>=0.16",
    "pyvis>=0.3.2",
    # Embeddings de imagen
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "timm>=1.0.3",
    "pillow>=10.3.0",
    # Utilidades
    "structlog>=24.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
